<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/black"
            android:lines="1"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/black"
            android:lines="2"
            android:textSize="65sp" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:orientation="horizontal"
        android:rowCount="9"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/bt_mc"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_gray"
            android:text="@string/mc"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <Button
            android:id="@+id/bt_mPlus"
            android:layout_width="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_gray"
            android:text="@string/m"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <Button
            android:id="@+id/bt_mMinus"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_gray"
            android:text="@string/m2"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <Button
            android:id="@+id/bt_mr"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_gray"
            android:text="@string/mr"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <Button
            android:id="@+id/bt_c"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_blue1"
            android:text="@string/c"
            android:textColor="#3F51B5"
            android:textSize="35dp" />

        <Button
            android:id="@+id/bt_division"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_blue1"
            android:text="@string/division"
            android:textColor="#3F51B5"
            android:textSize="45dp" />

        <Button
            android:id="@+id/bt_product"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_blue1"
            android:text="@string/product"
            android:textColor="#3F51B5"
            android:textSize="45dp" />

        <ImageButton
            android:id="@+id/bt_back"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_blue1"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:src="@drawable/backspace"
            />

        <Button
            android:id="@+id/bt_7"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_gray"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <Button
            android:id="@+id/bt_8"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_gray"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <Button
            android:id="@+id/bt_9"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_gray"
            android:text="@string/_9"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <Button
            android:id="@+id/bt_minus"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_blue1"
            android:text="@string/minus"
            android:textColor="#3F51B5"
            android:textSize="35dp" />

        <Button
            android:id="@+id/bt_4"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_gray"
            android:text="@string/_4"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <Button
            android:id="@+id/bt_5"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_gray"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <Button
            android:id="@+id/bt_6"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_gray"
            android:text="@string/_6"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <Button
            android:id="@+id/bt_plus"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_blue1"
            android:text="@string/plus"
            android:textColor="#3F51B5"
            android:textSize="35dp" />

        <Button
            android:id="@+id/bt_1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_gray"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <Button
            android:id="@+id/bt_2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_gray"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <Button
            android:id="@+id/bt_3"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_gray"
            android:text="@string/_3"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <Button
            android:id="@+id/bt_equals"
            android:layout_rowSpan="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_blue2"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="50dp" />

        <Button
            android:id="@+id/bt_percent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_gray"
            android:text="@string/percent"
            android:textColor="@color/black"
            android:textSize="33dp" />

        <Button
            android:id="@+id/bt_0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_gray"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <Button
            android:id="@+id/bt_dot"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@drawable/selector_gray"
            android:text="@string/dot"
            android:textColor="@color/black"
            android:textSize="35dp" />

    </GridLayout>
</LinearLayout>